# mcp-ai-dev-workflow

./: .gitignore  README.md
code/: .env.template  .gitignore  pyproject.toml  server.py
code/0-mcp-demo/: client.py  server.py
code/0-mcp-demo/http/: http_client.py  http_server.py
code/0-mcp-demo/stdio/: stdio_client.py  stdio_server.py  test_json.md
code/1-mcp-all-primitives/: client.py  server.py
code/1-sampling/: server.py
code/2-progress-tracking/: server.py
code/2-sampling/: client.py  server.py
code/3-progress-tracking/: server.py
code/4-mcp-adv-usecases/: data.py  middleware.py  server.py  utils.py
course-slides/: package-lock.json  package.json  pnpm-lock.yaml  slides.md
course-slides/pages/: 01-introduction.md  02-mcp-untold-pieces.md  03-mcp-communication.md  04-mcp-best-practices.md  04-real-world-example.md  toc.md
